fix mobile header z-index

--- a/src/components/Detail.css
+++ b/src/components/Detail.css
@@ -5,6 +5,7 @@
 
 .info_wrapper{
     position: relative;
+    height:500px;
 }
 .info_back{
     height:500px;
@@ -20,7 +21,7 @@
     position :absolute;
     top:0px;
     width:100%;
-    height:500px; 
+    height:100%;
 }
 .info_main{
     flex:1;
@@ -70,7 +71,7 @@
     }
 
     .info_back{
-        opacity: 0;
+        display:none;
         z-index: -2;
     }
 
@@ -90,6 +91,9 @@
 }
 
 @media screen and (max-width:425px){
+    .info{
+        z-index:-1;
+    }
     .info_poster{
         top:40px;
         height:calc(100% - 40px);
