--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -64,6 +64,7 @@ a{
         margin:0px;
         height:50px;
         background-color: rgb(0,0,0,0.5);
+        z-index: 10;
     }
    .header_links li{
         height:50px;
@@ -76,4 +77,5 @@ a{
         border-top:2px solid rgb(252, 198, 50);
         color:rgb(252, 198, 50);
     }
+    
 }
